fix select activity issue on mobile always closing when clicked.

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,11 +6,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
 
 @layer base {
   :root {
